<resources>
    <string name="app_name">Car Report</string>
    <string name="app_description">Enter the costs of your car and receive nice reports and statistics.</string>
    <string name="about_author">© Jan Kühle</string>
    <string name="about_version">Version: %s</string>
    <string name="about_licenses">Licenses</string>
    <string name="menu_synchronize">Synchronize</string>
    <string name="menu_add_refueling">Add refueling</string>
    <string name="menu_add_other">Add other</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_help">Help</string>
    <string name="menu_save">Done</string>
    <string name="menu_cancel">Cancel</string>
    <string name="menu_delete">Delete</string>
    <string name="menu_add_car">Add car</string>
    <string name="menu_add_fuel_type">Add fuel type</string>
    <string name="menu_show_trend">Show trend</string>
    <string name="menu_show_overall_trend">Show overall trend</string>
    <string name="section_car">Car</string>
    <string name="section_note">Note</string>
    <string name="section_fuel_tanks">Fuel tanks</string>
    <string name="section_suspend">Suspend</string>
    <string name="section_recurrence">Recurrence</string>
    <string name="hint_mileage_optional">Total distance (optional)</string>
    <string name="hint_volume">Volume</string>
    <string name="hint_price">Price</string>
    <string name="hint_note_optional">Note (optional)</string>
    <string name="hint_title">Title</string>
    <string name="hint_name">Name</string>
    <string name="hint_tank">Tank</string>
    <string name="hint_select_fuel_type">Select fuel type</string>
    <string name="label_partial">Partial</string>
    <string name="label_color">Color</string>
    <string name="label_suspend">Suspend</string>
    <string name="label_add">Add</string>
    <string name="label_add_dialog">Add…</string>
    <string name="label_set_end_date">Set end date</string>
    <string name="validate_error_greater_zero">Has to be greater 0</string>
    <string name="validate_error_not_empty">Must not be empty</string>
    <string name="validate_error_no_fuel_types">At least one fuel type must be assigned</string>
    <string name="validate_error_mileage_out_of_range_total">Mileage needs to be between the mileage of the previous and next refueling in total distance entry mode. If you meant to insert trip distance, you can change entry mode in the settings.</string>
    <string name="validate_error_mileage_out_of_range_trip">The cumulated mileage cannot be higher than the mileage of the next refueling in trip distance entry mode. If you meant to insert total distance, you can change entry mode in the settings.</string>
    <string name="suspended">Suspended</string>
    <string name="suspended_since">Suspended since %s</string>
    <string name="overwrite">Overwrite</string>
    <string name="restore">Restore</string>
    <string name="import_">Import</string>
    <string name="title_first_start">First steps</string>
    <string name="title_add_refueling">Add refueling</string>
    <string name="title_edit_refueling">Edit refueling</string>
    <string name="title_settings">Settings</string>
    <string name="title_help">Help</string>
    <string name="title_add_other">Add other</string>
    <string name="title_edit_other">Edit other</string>
    <string name="title_add_car">Add car</string>
    <string name="title_edit_car">Edit car</string>
    <string name="title_add_fuel_type">Add fuel type</string>
    <string name="title_edit_fuel_type">Edit fuel type</string>
    <string name="cab_title_selected">%d selected</string>
    <string name="edit_title_refueling">Refueling</string>
    <string name="edit_message_no_entry_selected">No entry selected</string>
    <string name="edit_message_no_entries_available">No entries available</string>
    <string name="alert_delete_refueling_message">This refueling will be deleted.</string>
    <string name="alert_delete_other_message">This other cost will be deleted.</string>
    <string name="alert_delete_car_message">This car will be deleted.</string>
    <string name="alert_delete_cars_message">The %d selected cars will be deleted.</string>
    <string name="alert_delete_fuel_types_message">The %d selected fuel types will be deleted.</string>
    <string name="alert_cannot_delete_last_car">One car cannot be deleted.</string>
    <string name="alert_cannot_delete_fuel_type">Cannot delete fuel type, because it is used by at least one refueling or fuel tank.</string>
    <string name="alert_delete_refuelings_message">The %d selected refuelings will be deleted.</string>
    <string name="alert_about_licenses_title">Licenses</string>
    <string name="alert_delete_title">Confirm delete</string>
    <string name="alert_delete_others_message">The %d selected other costs will be deleted.</string>
    <string name="alert_change_color_title">Choose color</string>
    <string name="alert_sync_finishing_authentication">Finishing authentication…</string>
    <string name="alert_sync_first_sync_title">First synchronization</string>
    <string name="alert_sync_first_sync_message">There is remote data available. Please choose which data you want to use on your first synchronization.</string>
    <string name="alert_sync_first_sync_download">Online data</string>
    <string name="alert_sync_first_sync_upload">Local data</string>
    <string name="alert_backup_overwrite_title">Backup</string>
    <string name="alert_backup_overwrite_message">A previous backup file does already exist on SD card.</string>
    <string name="alert_restore_title">Restore</string>
    <string name="alert_restore_message">When restoring from file, all current data will be overwritten. Also make sure the backup is from an app with equal or lower version than the one installed.</string>
    <string name="alert_export_csv_overwrite_title">Export CSV</string>
    <string name="alert_export_csv_overwrite_message">Export files from a previous export do already exist on SD card.</string>
    <string name="alert_import_csv_title">Import CSV</string>
    <string name="alert_import_csv_message">Import will update existing entries and add new ones, but it will not delete entries.</string>
    <string name="alert_add_fuel_type_title">Add fuel type</string>
    <string name="alert_fuel_type_exists_message">This fuel type does already exist.</string>
    <string name="alert_cannot_remove_fuel_tank_message">The tank cannot be removed, because it is used by refuelings.</string>
    <string name="toast_synchronization_failed">Synchronization failed</string>
    <string name="toast_refueling_saved">Refueling saved</string>
    <string name="toast_refueling_deleted">Refueling deleted</string>
    <string name="toast_other_saved">Other cost saved</string>
    <string name="toast_other_deleted">Other cost deleted</string>
    <string name="toast_car_saved">Car saved</string>
    <string name="toast_car_deleted">Car deleted</string>
    <string name="toast_sync_authentication_failed">Authentication failed</string>
    <string name="toast_backup_success">Backup to file %s completed successfully.</string>
    <string name="toast_backup_failed">Backup failed</string>
    <string name="toast_restore_success">Restore completed successfully</string>
    <string name="toast_restore_failed">Restore failed</string>
    <string name="toast_export_csv_succeeded">Export to SD card completed successfully.</string>
    <string name="toast_export_csv_failed">Export failed.</string>
    <string name="toast_import_csv_success">Import completed successfully.</string>
    <string name="toast_import_csv_failed">Import failed. No data was changed.\n\nPossible reasons:\n - Import data is not in the correct format.</string>
    <string name="report_title_fuel_consumption">Fuel consumption</string>
    <string name="report_title_fuel_price">Fuel price</string>
    <string name="report_title_mileage">Mileage</string>
    <string name="report_title_costs">Costs</string>
    <string name="report_trend_label">%s (Trend)</string>
    <string name="report_overall_trend_label">%s (Overall trend)</string>
    <string name="report_graph_month_history">Month History</string>
    <string name="report_graph_year_history">Year History</string>
    <string name="report_graph_accumulated">Accumulated</string>
    <string name="report_graph_per_refueling">Per Refueling</string>
    <string name="report_graph_per_month">Per Month</string>
    <string name="report_not_enough_data">Not enough data</string>
    <string name="report_since">&#931; since %s</string>
    <string name="report_lowest">Lowest</string>
    <string name="report_highest">Highest</string>
    <string name="report_average">Average</string>
    <string name="report_day">Day</string>
    <string name="report_month">Month</string>
    <string name="report_year">Year</string>
    <string name="report_toast_car">Car</string>
    <string name="report_toast_consumption">Consumption</string>
    <string name="report_toast_mileage">Mileage</string>
    <string name="report_toast_price">Price</string>
    <string name="report_toast_date">Date</string>
    <string name="report_toast_fueltype">Fuel type</string>
    <string name="report_toast_none">none</string>
    <string name="pref_title_header_about">About Car Report</string>
    <string name="pref_title_header_general">General settings</string>
    <string name="pref_title_header_cars">Cars</string>
    <string name="pref_title_header_fuel_types">Fuel Types</string>
    <string name="pref_title_header_report_order">Report order</string>
    <string name="pref_title_header_backup">Backup &amp; Export</string>
    <string name="pref_title_category_syncronisation">Synchronisation</string>
    <string name="pref_title_category_behavior">Behavior</string>
    <string name="pref_title_category_appearance">Appearance</string>
    <string name="pref_title_category_units">Units</string>
    <string name="pref_title_category_backup">Backup &amp; Restore</string>
    <string name="pref_title_category_export">Export &amp; Import</string>
    <string name="pref_title_behavior_default_car">Default car</string>
    <string name="pref_title_behavior_show_car_menu">Show car menu</string>
    <string name="pref_title_behavior_distance_entry_mode">Distance Entry Mode</string>
    <string name="pref_title_behavior_auto_guess_missing_data">Balance missing refuelings (Beta)</string>
    <string name="pref_title_appearance_color_sections">Color sections</string>
    <string name="pref_title_appearance_show_legend">Show legend in graph</string>
    <string name="pref_title_unit_currency">Currency</string>
    <string name="pref_title_unit_volume">Volume</string>
    <string name="pref_title_unit_distance">Distance</string>
    <string name="pref_title_unit_fuel_consumption">Fuel Consumption</string>
    <string name="pref_title_sync_setup">Set up synchronization</string>
    <string name="pref_summary_appearance_color_sections">Show the section headings in the color of their corresponding car.</string>
    <string name="pref_summary_appearance_show_legend">Show a legend in the graphs, displaying which line belongs to which car.</string>
    <string name="first_start_hi">Hi there!</string>
    <string name="first_start_intro">Car Report can display nice reports for your car expenses, including fuel consumption and overall costs. Start with these simple steps:</string>
    <string name="first_start_step1_img_desc">First step</string>
    <string name="first_start_step1_text">Create a car.</string>
    <string name="first_start_step2_img_desc">Second step</string>
    <string name="first_start_step2_text">Add refuelings.</string>
    <string name="first_start_step3_img_desc">Third step</string>
    <string name="first_start_step3_text">After two refuelings you should see the first graphs.</string>
    <string name="first_start_create_car">Create a car</string>
</resources>