<?xml version="1.0" encoding="utf-8"?>
<!--
  Copyright 2012 Jan Kühle

  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at

       http://www.apache.org/licenses/LICENSE-2.0

  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
-->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >
    <PreferenceCategory android:title="@string/pref_title_category_defaults" >
        <ListPreference
            android:defaultValue="0"
            android:key="default_report"
            android:title="@string/pref_title_default_report" />
        <ListPreference
            android:defaultValue="1"
            android:key="default_car"
            android:title="@string/pref_title_default_car" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/pref_title_category_appearance" >
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="appearance_color_sections"
            android:summary="@string/pref_summary_appearance_color_sections"
            android:title="@string/pref_title_appearance_color_sections" />
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="appearance_show_legend"
            android:summary="@string/pref_summary_appearance_show_legend"
            android:title="@string/pref_title_appearance_show_legend" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/pref_title_category_units" >
        <EditTextPreference
            android:defaultValue="EUR"
            android:key="unit_currency"
            android:title="@string/pref_title_unit_currency" />
        <EditTextPreference
            android:defaultValue="l"
            android:key="unit_volume"
            android:title="@string/pref_title_unit_volume" />
        <EditTextPreference
            android:defaultValue="km"
            android:key="unit_distance"
            android:title="@string/pref_title_unit_distance" />
    </PreferenceCategory>
</PreferenceScreen>