<?xml version="1.0" encoding="utf-8"?>
<!--
  Copyright 2012 Jan Kühle

  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at

       http://www.apache.org/licenses/LICENSE-2.0

  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    <!-- Title -->
    <AutoCompleteTextView
        android:id="@+id/edt_title"
        style="@style/edit_title"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:hint="@string/hint_title" />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="16dp" >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >
            <!-- Date -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >
                <EditText
                    android:id="@+id/edt_date"
                    style="@android:style/Widget.Holo.Spinner"
                    android:layout_width="0dp"
                    android:layout_height="48dp"
                    android:layout_weight="0.6"
                    android:focusable="false"
                    android:inputType="date" />
                <EditText
                    android:id="@+id/edt_time"
                    style="@android:style/Widget.Holo.Spinner"
                    android:layout_width="0dp"
                    android:layout_height="48dp"
                    android:layout_weight="0.4"
                    android:focusable="false"
                    android:inputType="time" />
            </LinearLayout>
            <!-- Mileage -->
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >
                <EditText
                    android:id="@+id/edt_mileage"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:hint="@string/hint_mileage_optional"
                    android:inputType="number" />
                <TextView
                    android:id="@+id/txt_unit_distance"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right|center_vertical"
                    android:layout_marginRight="8dp" />
            </FrameLayout>
            <!-- Price -->
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >
                <EditText
                    android:id="@+id/edt_price"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:hint="@string/hint_price"
                    android:inputType="number|numberDecimal" />
                <TextView
                    android:id="@+id/txt_unit_currency"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right|center_vertical"
                    android:layout_marginRight="8dp" />
            </FrameLayout>
            <!-- Recurrence -->
            <TextView
                style="@style/section_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/section_recurrence" />
            <Spinner
                android:id="@+id/spn_repeat"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:entries="@array/repeat_intervals" />
            <CheckBox
                android:id="@+id/chk_end_date"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:text="@string/label_set_end_date" />
            <LinearLayout
                android:id="@+id/layout_end_date"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:orientation="horizontal" >
                <EditText
                    android:id="@+id/edt_end_date"
                    style="@android:style/Widget.Holo.Spinner"
                    android:layout_width="0dp"
                    android:layout_height="48dp"
                    android:layout_weight="0.6"
                    android:focusable="false"
                    android:inputType="date" />
                <EditText
                    android:id="@+id/edt_end_time"
                    style="@android:style/Widget.Holo.Spinner"
                    android:layout_width="0dp"
                    android:layout_height="48dp"
                    android:layout_weight="0.4"
                    android:focusable="false"
                    android:inputType="time" />
            </LinearLayout>
            <!-- Note -->
            <TextView
                style="@style/section_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/section_note" />
            <EditText
                android:id="@+id/edt_note"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:hint="@string/hint_note_optional"
                android:inputType="text|textMultiLine" />
            <!-- Car -->
            <TextView
                style="@style/section_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/section_car" />
            <Spinner
                android:id="@+id/spn_car"
                android:layout_width="match_parent"
                android:layout_height="48dp" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>